[KNotifications] Don't use KPassivePopup without QApplication

When using KNotification from a QGuiApplication and there is no notification service present,
the application will assert.

CHANGELOG: KNotification will no longer crash when using it in a QGuiApplication and no notification service is running

BUG: 370667
REVIEW: 129177